--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;/header&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;section id="home" class="hero"&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;h2&gt;Küllerinden Doğan Güç&lt;/h2&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;h2&gt;YENİLİKÇİ, ETKİLİ VE BENZERSİZ ÇÖZÜMLER...&lt;/h2&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;p&gt;Enerji, mühendislik, ticaret ve sürdürülebilirliğin birleştiği yer.&lt;/p&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;/section&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
